Your commit message

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,8 @@ repos:
     hooks:
     -   id: bandit
         args: ["--skip=B101"]
+-   repo: git@github.com:awslabs/automated-security-helper.git
+    rev: '1.1.0-e-01Dec2023' # update with the latest tagged version in the repository
+    hooks:
+    - id: ash
+      name: scan files using ash 
